--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -12,12 +12,14 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
+  devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
   field_ui: 0
   file: 0
   filter: 0
+  graphql: 0
   help: 0
   history: 0
   image: 0
